[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprite/human/default.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://sprite/fish/default.png" type="Texture" id=3]
[ext_resource path="res://sprite/human/walk1.png" type="Texture" id=4]
[ext_resource path="res://sprite/human/walk2.png" type="Texture" id=5]
[ext_resource path="res://sprite/human/fall.png" type="Texture" id=6]
[ext_resource path="res://sprite/human/jump1.png" type="Texture" id=7]
[ext_resource path="res://sprite/bird/default.png" type="Texture" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.75
height = 23.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.125, 2.875 )
shape = SubResource( 1 )

[node name="HumanSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -3.4375 )
scale = Vector2( 1.35667, 1.45079 )
frames = SubResource( 2 )
animation = "fall"

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI label" type="Label" parent="UI"]
margin_left = -48.8656
margin_top = -30.6009
margin_right = -22.8656
margin_bottom = -16.6009
text = "HP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="UI"]
margin_left = -21.3865
margin_top = -30.5662
margin_right = 31.6135
margin_bottom = -16.5662
text = "100/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FishSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="BirdSprite" type="Sprite" parent="."]
position = Vector2( 0.297302, -6.98659 )
texture = ExtResource( 8 )
